--- a/platforms/browser/www/beforelogin.html
+++ b/platforms/browser/www/beforelogin.html
@@ -1,48 +1,15 @@
-<!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-   <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />-->
-    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-  
-    <!-- Good default declaration:
-    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-    -->
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
-    <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
-    <script src='js/jquery-2.2.4.min.js'></script>
-    <script src="js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Untitled Document</title>
+
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <style>
+
+<style>
 body {
 	background: url(img/images-nxias/beforelogin-bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -64,11 +31,12 @@ body {
 }
 
 </style>
-    <title>Loding...</title>
+
+
 </head>
 
 <body>
-    <div class="topper">
+<div class="topper">
   <img src="img/images-nxias/nxias-logo-round.JPG" width="15%" style="border-radius:50%;" />
   <h1>ANNEX IAS ACADEMY</h1>
 </div>
@@ -84,11 +52,11 @@ Annex IAS Academy aims to develop amongst its students a competitive attitude al
 </div>
 
 <div style="text-align:center;">
-<a href="registration.html"><button class="btn btn-primary btn-lg" style="border-radius:0px; font-size:50px;"><i class="fa fa-edit"></i> Register Now</button></a>
+<button class="btn btn-primary btn-lg" style="border-radius:0px; font-size:50px;"><i class="fa fa-edit"></i> Register Now</button>
 </div>
 
 <div style="text-align:center; margin-top:20px;">
-<a href="login.html"><button class="btn btn-info btn-lg" style="border-radius:0px; font-size:50px;"><i class="fa fa-sign-in"></i> Login here</button></a>
+<button class="btn btn-info btn-lg" style="border-radius:0px; font-size:50px;"><i class="fa fa-sign-in"></i> Login here</button>
 </div>
 
 <div style="text-align:center; margin-top:50px;">
@@ -101,10 +69,10 @@ Annex IAS Academy aims to develop amongst its students a competitive attitude al
         </div>
 
 </div>
-<script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript">
-        app.initialize();
-    </script>
+
+
 </body>
 
+
 </html>
+
