--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -119,7 +119,7 @@ input[type="password"] {
             <button class="btn btn-lg btn-info btn-block" style="font-size:50px;" id="btnLogin" value="Login" type="button">Login</button>
             </form>
             <h2 class="text-center">
-                <a href="#" class="linkstyle">Forgot Password ?</a>
+                <a href="forget_pass.html" class="linkstyle">Forgot Password ?</a>
             </h2>
         </div>
     
