--- a/www/home.html
+++ b/www/home.html
@@ -63,7 +63,7 @@ body {
     position: absolute;
     top: -50px;
     right: 25px;
-	margin-bottom::50px;
+	margin-bottom:50px;
     font-size: 120px;
     margin-left: 50px;
 	border:none;
@@ -134,7 +134,7 @@ hr.style13 {
   <a href="#"><i class="fa fa-home"></i> &nbsp;About Us</a>
   <a href="#"><i class="fa fa-edit"></i> &nbsp;Terms of Use</a>
   <a href="#"><i class="fa fa-life-ring"></i> &nbsp;Support</a>
-  <a href="#"><i class="fa fa-sign-out"></i> &nbsp;Log Out</a>
+  <a href="#" id="btnLogout"><i class="fa fa-sign-out"></i> &nbsp;Log Out</a>
 </div>
 
 <!--<h2>Animated Sidenav Example</h2>
@@ -259,7 +259,7 @@ hr.style13 {
                                     </div>
                                 <hr class="style13">
                                 
-        						</div> <!-- scrollable div --->
+        						</div> <!-- scrollable div -->
         </div>
         
     </div>
