--- a/www/home.html
+++ b/www/home.html
@@ -130,7 +130,7 @@ hr.style13 {
   <a href="#"><i class="fa fa-file-text"></i> &nbsp;Study Materials</a>
   <a href="#"><i class="fa fa-video-camera"></i> &nbsp;Video Tutorials</a>
   <a href="#"><i class="fa fa-comment"></i> &nbsp;Notifications</a>
-  <a href="#"><i class="fa fa-user"></i> &nbsp;Profile</a>
+  <a href="profile.html"><i class="fa fa-user"></i> &nbsp;Profile</a>
   <a href="#"><i class="fa fa-home"></i> &nbsp;About Us</a>
   <a href="#"><i class="fa fa-edit"></i> &nbsp;Terms of Use</a>
   <a href="#"><i class="fa fa-life-ring"></i> &nbsp;Support</a>
