--- a/platforms/browser/www/profile.html
+++ b/platforms/browser/www/profile.html
@@ -8,7 +8,7 @@
     />
     <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" /> -->
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *"
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'"
     />
     <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
@@ -64,7 +64,7 @@ body {
     position: absolute;
     top: -50px;
     right: 25px;
-	margin-bottom::50px;
+	margin-bottom:50px;
     font-size: 120px;
     margin-left: 50px;
 	border:none;
