Alert Message Bug Fix And Profile Edit Button Working Fine

--- a/platforms/browser/www/profile.html
+++ b/platforms/browser/www/profile.html
@@ -279,39 +279,39 @@
                             <div class="form-group" style="font-size:45px;">
                                 <span id="statef">Loading....</span>
                                 <span class="pull-right">
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-check-circle" style="color:#009900; display:none"></i>
+                                    <i class="fa fa-edit" id="btnStateEdit"></i>
+                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnStateSubmit"></i>
                                 </span>
-                                <select class="form-control" style="font-size:45px; display:none;">
-                                    <option>Select State</option>
-                                    <option>Uttar Pradesh</option>
-                                    <option>West Bengal</option>
+                                <select class="form-control" id="ddlState" style="font-size:45px; display:none;">
+                                    <option hidden selected>Select State</option>
+                                    <option value="UP">Uttar Pradesh</option>
+                                    <option value="WB">West Bengal</option>
                                 </select>
                             </div>
 
                             <div class="form-group" style="font-size:45px;">
                                 <span id="cityf">Loading...</span>
                                 <span class="pull-right">
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-check-circle" style="color:#009900; display:none"></i>
+                                    <i class="fa fa-edit" id="btnCityEdit"></i>
+                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnCitySave"></i>
                                 </span>
-                                <select class="form-control" style="font-size:45px; display:none;" >
-                                    <option>Select City</option>
-                                    <option>Lucknow</option>
-                                    <option>Kolkata</option>
+                                <select class="form-control" id="ddlCity" style="font-size:45px; display:none;" >
+                                    <option hidden selected>Select Mode</option>
+                                    <option value="Lucknow">Lucknow</option>
+                                    <option value="Kolkata">Kolkata</option>
                                 </select>
                             </div>
 
                             <div class="form-group" style="font-size:45px;">
                                 <span id="coursef">Loading...</span>
                                 <span class="pull-right">
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-check-circle" style="color:#009900; display:none"></i>
+                                    <i class="fa fa-edit" id="btnCourseEdit"></i>
+                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnCourseSubmit"></i>
                                 </span>
-                                <select class="form-control" style="font-size:45px; display:none; ">
-                                    <option>Select Course</option>
-                                    <option>Course 1</option>
-                                    <option>Course 2</option>
+                                <select class="form-control" id="ddlCouese" style="font-size:45px; display:none; ">
+                                    <option hidden selected>Select Course</option>
+                                    <option value="C1">Course 1</option>
+                                    <option value="C2">Course 2</option>
                                 </select>
                             </div>
 
