Registation Bug Fixed

--- a/platforms/browser/www/home.html
+++ b/platforms/browser/www/home.html
@@ -131,7 +131,7 @@ hr.style13 {
   <a href="#"><i class="fa fa-video-camera"></i> &nbsp;Video Tutorials</a>
   <a href="#"><i class="fa fa-comment"></i> &nbsp;Notifications</a>
   <a href="profile.html"><i class="fa fa-user"></i> &nbsp;Profile</a>
-  <a href="#"><i class="fa fa-home"></i> &nbsp;About Us</a>
+  <a href="about_us.html"><i class="fa fa-home"></i> &nbsp;About Us</a>
   <a href="#"><i class="fa fa-edit"></i> &nbsp;Terms of Use</a>
   <a href="#"><i class="fa fa-life-ring"></i> &nbsp;Support</a>
   <a href="#" id="btnLogout"><i class="fa fa-sign-out"></i> &nbsp;Log Out</a>
@@ -150,7 +150,7 @@ hr.style13 {
 <div style="padding:120px 15px 15px 15px;"> 
 	<div class="well">
     	<div class="alert alert-info text-center" style="background-color:#005959; color:#FFFFFF;">
-        <span style="font-size:40px;"><img src="images-nxias/profile-image.jpg" style="border-radius:50%; width:100px;" /> &nbsp;Subhomoy Samanta</span>
+        <span style="font-size:40px;"><img src="img/images-nxias/profile-image.jpg" style="border-radius:50%; width:100px;" /> &nbsp;Subhomoy Samanta</span>
         </div>
         
         <div class="alert alert-info">
