--- a/platforms/browser/www/profile.html
+++ b/platforms/browser/www/profile.html
@@ -266,8 +266,8 @@
                             <div class="form-group" style="font-size:45px;">
                                 <span id="modef">Loading....</span>
                                 <span class="pull-right">
-                                    <i class="fa fa-edit" id="btnModeEdit"></i>
-                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnModeSubmit"></i>
+                                    <!-- <i class="fa fa-edit" id="btnModeEdit"></i>
+                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnModeSubmit"></i> -->
                                 </span>
                                 <select class="form-control" id="ddlMode" style="font-size:45px; display:none;" >
                                     <option hidden selected>Select Mode</option>
@@ -305,8 +305,8 @@
                             <div class="form-group" style="font-size:45px;">
                                 <span id="coursef">Loading...</span>
                                 <span class="pull-right">
-                                    <i class="fa fa-edit" id="btnCourseEdit"></i>
-                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnCourseSubmit"></i>
+                                    <!-- <i class="fa fa-edit" id="btnCourseEdit"></i>
+                                    <i class="fa fa-check-circle" style="color:#009900; display:none" id="btnCourseSubmit"></i> -->
                                 </span>
                                 <select class="form-control" id="ddlCouese" style="font-size:45px; display:none; ">
                                     <option hidden selected>Select Course</option>
