Test Image Upload

--- a/platforms/browser/www/beforelogin.html
+++ b/platforms/browser/www/beforelogin.html
@@ -104,6 +104,7 @@ Annex IAS Academy aims to develop amongst its students a competitive attitude al
 
 </div>
 <script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/beforelogin.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
